fix css bug on overflow

--- a/V2.0/styles/main-style.css
+++ b/V2.0/styles/main-style.css
@@ -71,6 +71,7 @@ body{
 }
 #canvas-area-panel{
 	flex: auto;
+	overflow: hidden;
 }
 #layer-area-panel{
 	z-index: 1;
